[package]
name = "ai2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.20"
clap = "4.1.14"
libc = "0.2.140"
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
target-cpu = "native"
