[workspace]
members = ["core-2048", "lib-2048", "optimise-2048"]

[package]
name = "ai-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.1"
lib-2048 = { path = "lib-2048" }
libc = "0.2.142"
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
# Include symbols to allow flamegraph generation
strip = "symbols"
#strip = "none"
#debug = 1
