[package]
name = "lib-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-2048 = { path = "../core-2048" }
rand = "0.8.5"
rustc-hash = "1.1.0"

[build-dependencies]
core-2048 = { path = "../core-2048" }
