[package]
name = "optimise-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-2048 = { path = "../lib-2048" }
libm = "0.2.6"
nalgebra = "0.32.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
